# RAGfolio

./: .gitignore  Makefile  README.md  docker-compose.yml  ragfolio.nishantlabs.cloud.nginx.conf
.github/workflows/: build_and_deploy.yaml  terraform.yaml
app/: Dockerfile  main.py  pyproject.toml
app/rag_engine/: agent_caller.py  nodes.py  tools.py  workflow.py
app/resume_embedding/: embedding.py  embedding_system.py
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/rag_engine/: agent.py  agent_caller.py  nodes.py  state.py  tools.py  workflow.py
backend/src/backend/resume_embedding/: config.py  embedding.py  embedding_system.py
frontend/: Dockerfile  main.py  pyproject.toml
infra/: Makefile  main.tf  terraform.tfvars  variables.tf
